Add code for fetching data from api

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <span class="desc">Sunny</span>                        
                     </div>
                     <ul class="misc-items">
-                        <li class="preci">Precipitation: <span>100%</span></li>
+                        <li class="pressure">Pressure: <span>100%</span></li>
                         <li class="humidity">Humidity: <span>97%</span></li>
                         <li class="wind">Wind: <span class="speed">120km/h</span><span class="direction"><i class="fa fa-location-arrow"></i>100&deg;</span></li>
                         <li class="cloudiness">Cloudiness:<span>100%</span></li>
